--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 background-color:rgb(239, 247, 250);
                 padding-block: 5px ;
             }
-            form{padding: 10%;}
+            form{
+                padding: 10%;
+            }
             footer{
                 width: 300px;
                 margin: auto;
